--- a/android/app/src/main/res/layout/fragment_hospital.xml
+++ b/android/app/src/main/res/layout/fragment_hospital.xml
@@ -1,16 +1,37 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="nav.HospitalFragment">
+    android:paddingTop="80dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp">
 
+    <!-- 타이틀 -->
     <TextView
+        android:id="@+id/tv_hospital_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="병원 추천 페이지"
-        android:textSize="18sp"
-        android:textAlignment="center"
+        android:text="추천 병원"
+        android:textSize="24sp"
+        android:textStyle="bold"
         android:gravity="center"
-        android:layout_gravity="center"/>
+        android:layout_marginBottom="16dp" />
 
-</FrameLayout>
+    <!-- 구분선 -->
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="4dp"
+        android:background="#000000"
+        android:layout_marginBottom="16dp" />
+
+    <!-- RecyclerView: weight로 남은 공간 모두 차지 -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_hospitals"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:clipToPadding="false"
+        android:paddingBottom="16dp" />
+
+</LinearLayout>
