--- a/android/app/src/main/res/drawable/rounded_table.xml
+++ b/android/app/src/main/res/drawable/rounded_table.xml
@@ -4,7 +4,7 @@
         <solid android:color="@android:color/white"/>
         <stroke
             android:width="1dp"
-            android:color="@color/light_grey"
+            android:color="@color/blue_gray"
             android:dashWidth="0dp"/> <!-- 테두리 색 -->
 
     </shape>
