--- a/android/app/src/main/res/drawable/rounded_table_right.xml
+++ b/android/app/src/main/res/drawable/rounded_table_right.xml
@@ -4,6 +4,6 @@
     <solid android:color="@color/white"/>
     <stroke
         android:width="1dp"
-        android:color="@color/light_grey"/> <!-- 테두리 색 -->
+        android:color="@color/blue_gray"/> <!-- 테두리 색 -->
     <corners android:bottomRightRadius="12dp"/>
 </shape>
