--- a/android/app/src/main/res/layout/activity_detail_hospital.xml
+++ b/android/app/src/main/res/layout/activity_detail_hospital.xml
@@ -4,14 +4,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:clipToPadding="false">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="20dp"
-        android:layout_marginTop="30dp">
+        android:layout_marginTop="30dp"
+        android:paddingBottom="40dp">
 
         <!-- 제목 -->
         <LinearLayout
@@ -74,7 +76,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="18dp"
+            android:layout_marginTop="20dp"
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -155,13 +157,13 @@
             android:layout_width="match_parent"
             android:layout_height="0.8dp"
             android:background="@color/light_grey"
-            android:layout_marginTop="20dp"/>
+            android:layout_marginTop="30dp"/>
 
         <!-- 진료 정보 (간단 리스트 예시) -->
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="30dp"
             android:text="진료 정보"
             android:textStyle="bold"
             android:textSize="18sp"/>
@@ -171,6 +173,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:stretchColumns="1"
-            android:layout_marginTop="17dp"/>
+            android:layout_marginTop="17dp"
+            android:paddingBottom="40dp"/>
     </LinearLayout>
 </ScrollView>
