--- a/android/app/src/main/res/layout/activity_login.xml
+++ b/android/app/src/main/res/layout/activity_login.xml
@@ -11,10 +11,11 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingStart="24dp"
-        android:paddingEnd="24dp"
-        android:paddingTop="32dp"
-        android:paddingBottom="32dp">
+        android:padding="40dp">
+<!--        android:paddingStart="24dp"-->
+<!--        android:paddingEnd="24dp"-->
+<!--        android:paddingTop="32dp"-->
+<!--        android:paddingBottom="32dp"-->
 
         <!-- 제목 -->
         <TextView
@@ -24,6 +25,7 @@
             android:text="로그인"
             android:textStyle="bold"
             android:textSize="24sp"
+            android:layout_marginTop="50dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
@@ -33,9 +35,10 @@
             android:id="@+id/textId"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="아이디 (email형식)"
-            android:textSize="14sp"
-            android:layout_marginTop="28dp"
+            android:text="이메일 (EMAIL)"
+            android:textSize="15sp"
+            android:textColor="@color/black"
+            android:layout_marginTop="70dp"
             app:layout_constraintTop_toBottomOf="@id/Title"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
@@ -58,7 +61,8 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etId"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
+                android:background="@drawable/login_edittext"
                 android:inputType="textEmailAddress" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -68,7 +72,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="비밀번호 (PW)"
-            android:textSize="14sp"
+            android:textSize="15sp"
+            android:textColor="@color/black"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@id/insertId"
             app:layout_constraintStart_toStartOf="parent"
@@ -93,7 +98,8 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etPw"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
+                android:background="@drawable/login_edittext"
                 android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -103,20 +109,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="자동 로그인"
+            android:textSize="12sp"
             android:layout_marginTop="8dp"
+            android:buttonTint="@color/blue_gray"
             app:layout_constraintTop_toBottomOf="@id/insertPw"
             app:layout_constraintStart_toStartOf="parent" />
 
         <!-- 버튼들 (색/간격은 이전과 동일) -->
-        <com.google.android.material.button.MaterialButton
+        <Button
             android:id="@+id/btLogin"
             android:layout_width="0dp"
-            android:layout_height="48dp"
-            android:layout_marginTop="20dp"
+            android:layout_height="45dp"
+            android:layout_marginTop="40dp"
             android:text="로그인"
             android:textAllCaps="false"
             android:textColor="@android:color/white"
-            app:backgroundTint="#4C6FFF"
+            android:background="@drawable/rounded_btn"
+            app:backgroundTint="@color/blue_navy"
             app:cornerRadius="12dp"
             app:layout_constraintTop_toBottomOf="@id/cbAuto"
             app:layout_constraintStart_toStartOf="parent"
@@ -134,30 +143,29 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
-        <com.google.android.material.button.MaterialButton
+        <ImageButton
             android:id="@+id/btKakao"
-            android:layout_width="0dp"
-            android:layout_height="48dp"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:background="@drawable/kakao_login"
+            android:scaleType="fitXY"
             android:layout_marginTop="12dp"
-            android:text="카카오 로그인"
-            android:textAllCaps="false"
-            android:textColor="#191600"
-            app:backgroundTint="#FEE500"
-            app:cornerRadius="12dp"
             app:layout_constraintTop_toBottomOf="@id/Or"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/Signup"
-            style="@style/Widget.Material3.Button.OutlinedButton"
             android:layout_width="0dp"
-            android:layout_height="48dp"
+            android:layout_height="52dp"
             android:layout_marginTop="12dp"
             android:text="회원가입"
+            android:textColor="@color/blue_navy"
             android:textAllCaps="false"
-            app:cornerRadius="12dp"
+            app:cornerRadius="8dp"
             app:strokeWidth="1dp"
+            app:backgroundTint="@color/white"
+            app:strokeColor="@color/blue_navy"
             app:layout_constraintTop_toBottomOf="@id/btKakao"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
