--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -145,4 +145,5 @@
     <color name="black">#000000</color>
     <color name="blue_gray">#A9B7C8</color>
     <color name="light_blue_chart">#D7E2FF</color>
+    <color name="blue_navy">#5182FF</color>
 </resources>
