--- a/android/app/src/main/res/layout/activity_signup.xml
+++ b/android/app/src/main/res/layout/activity_signup.xml
@@ -10,10 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingStart="24dp"
-        android:paddingEnd="24dp"
-        android:paddingTop="32dp"
-        android:paddingBottom="32dp">
+        android:padding="40dp">
 
         <TextView
             android:id="@+id/tvTitle"
@@ -31,7 +28,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="이름"
-            android:layout_marginTop="24dp"
+            android:textColor="@color/black"
+            android:layout_marginTop="44dp"
             app:layout_constraintTop_toBottomOf="@id/tvTitle"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
@@ -41,25 +39,22 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            app:boxCornerRadiusTopStart="12dp"
-            app:boxCornerRadiusTopEnd="12dp"
-            app:boxCornerRadiusBottomStart="12dp"
-            app:boxCornerRadiusBottomEnd="12dp"
-            app:boxStrokeWidth="2dp"
-            app:boxStrokeWidthFocused="2dp"
+            android:layout_marginTop="10dp"
             app:layout_constraintTop_toBottomOf="@id/lblName"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
 
 
         <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/etName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="이름 입력"
-                android:inputType="textPersonName"
-                android:imeOptions="actionNext" />
+            android:id="@+id/etName"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:hint="이름 입력"
+            android:textSize="13sp"
+            android:padding="5dp"
+            android:background="@drawable/login_edittext"
+            android:inputType="textPersonName"
+            android:imeOptions="actionNext" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
@@ -67,7 +62,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="이메일"
-            android:layout_marginTop="16dp"
+            android:textColor="@color/black"
+            android:layout_marginTop="26dp"
             app:layout_constraintTop_toBottomOf="@id/tilName"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
@@ -77,13 +73,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            app:boxCornerRadiusTopStart="12dp"
-            app:boxCornerRadiusTopEnd="12dp"
-            app:boxCornerRadiusBottomStart="12dp"
-            app:boxCornerRadiusBottomEnd="12dp"
-            app:boxStrokeWidth="2dp"
-            app:boxStrokeWidthFocused="2dp"
+            android:layout_marginTop="10dp"
             app:layout_constraintTop_toBottomOf="@id/lblEmail"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
@@ -91,8 +81,11 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etEmail"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="45dp"
                 android:inputType="textEmailAddress"
+                android:background="@drawable/login_edittext"
+                android:textSize="13sp"
+                android:padding="5dp"
                 android:hint="example@email.com" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -101,24 +94,19 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="비밀번호"
-            android:layout_marginTop="16dp"
+            android:textColor="@color/black"
+            android:layout_marginTop="26dp"
             app:layout_constraintTop_toBottomOf="@id/tilEmail"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/tilPw"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_marginTop="10dp"
             app:endIconMode="password_toggle"
-            app:boxCornerRadiusTopStart="12dp"
-            app:boxCornerRadiusTopEnd="12dp"
-            app:boxCornerRadiusBottomStart="12dp"
-            app:boxCornerRadiusBottomEnd="12dp"
-            app:boxStrokeWidth="2dp"
-            app:boxStrokeWidthFocused="2dp"
             app:layout_constraintTop_toBottomOf="@id/lblPw"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
@@ -126,8 +114,11 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etPw"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="45dp"
                 android:inputType="textPassword"
+                android:background="@drawable/login_edittext"
+                android:padding="5dp"
+                android:textSize="15sp"
                 android:hint="비밀번호 (8~16자)" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -136,7 +127,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="비밀번호 확인"
-            android:layout_marginTop="16dp"
+            android:textColor="@color/black"
+            android:layout_marginTop="26dp"
             app:layout_constraintTop_toBottomOf="@id/tilPw"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
@@ -146,14 +138,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            app:endIconMode="password_toggle"
-            app:boxCornerRadiusTopStart="12dp"
-            app:boxCornerRadiusTopEnd="12dp"
-            app:boxCornerRadiusBottomStart="12dp"
-            app:boxCornerRadiusBottomEnd="12dp"
-            app:boxStrokeWidth="2dp"
-            app:boxStrokeWidthFocused="2dp"
+            android:layout_marginTop="10dp"
             app:layout_constraintTop_toBottomOf="@id/lblPw2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
@@ -161,8 +146,10 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etPw2"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="45dp"
                 android:inputType="textPassword"
+                android:textSize="13sp"
+                android:background="@drawable/login_edittext"
                 android:hint="비밀번호 재입력" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -171,7 +158,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="전화번호"
-            android:layout_marginTop="16dp"
+            android:textColor="@color/black"
+            android:layout_marginTop="26dp"
             app:layout_constraintTop_toBottomOf="@id/tilPw2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
@@ -181,7 +169,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="10dp"
             app:boxCornerRadiusTopStart="12dp"
             app:boxCornerRadiusTopEnd="12dp"
             app:boxCornerRadiusBottomStart="12dp"
@@ -195,8 +183,10 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etPhone"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="45dp"
                 android:inputType="phone"
+                android:textSize="13sp"
+                android:background="@drawable/login_edittext"
                 android:hint="010-1234-5678" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -205,7 +195,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="생년월일"
-            android:layout_marginTop="16dp"
+            android:textColor="@color/black"
+            android:layout_marginTop="26dp"
             app:layout_constraintTop_toBottomOf="@id/tilPhone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
@@ -215,7 +206,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="10dp"
             app:layout_constraintTop_toBottomOf="@id/lblBirth"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
@@ -255,7 +246,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="혈액형 / 성별 (선택)"
-            android:layout_marginTop="16dp"
+            android:textColor="@color/black"
+            android:layout_marginTop="26dp"
             app:layout_constraintTop_toBottomOf="@id/rowBirth"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
@@ -265,7 +257,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="10dp"
             app:layout_constraintTop_toBottomOf="@id/lblBlood"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
@@ -321,7 +313,7 @@
                 android:layout_width="0dp"
                 android:layout_height="48dp"
                 android:layout_weight="1"
-                android:text="확 인"
+                android:text="확인"
                 android:textAllCaps="false"
                 android:textColor="@android:color/white"
                 app:backgroundTint="#4C6FFF"
@@ -333,7 +325,7 @@
                 android:layout_height="48dp"
                 android:layout_weight="1"
                 android:layout_marginStart="12dp"
-                android:text="취 소"
+                android:text="취소"
                 android:textAllCaps="false"
                 app:strokeWidth="1dp"
                 app:cornerRadius="12dp"/>
